# CCA-app-demo

./: .gitignore  Makefile  README.md
app-manager/: Cargo.toml
app-manager/src/: app.rs  config.rs  diskmanager.rs  dm.rs  dmcrypt.rs  dmverity.rs  keys.rs  main.rs  manager.rs  utils.rs
config/: devicemapper.patch  init  kernel.config  nat100.xml  udhcpc.script
image/handler/: Cargo.toml
image/handler/src/: common.rs  hasher.rs  lib.rs  util.rs
image/handler/src/docker/: installer.rs  launcher.rs  manifests.rs  mod.rs
image/testapp/: Cargo.toml
image/testapp/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  protocol.rs
vm/: Cargo.toml
vm/src/: app.rs  daemon.rs  interface.rs  main.rs  protocol.rs  qdisk.rs  qemu.rs  realm.rs  utils.rs  vsock.rs
