[package]
name = "app-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
gpt = "3.1.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = { version = "1.0.114", features = ["alloc"] }
thiserror = "1.0.58"
uuid = { version = "1.7.0", features = ["serde"] }
devicemapper = { path = "../thirdparty/devicemapper-rs" }
hex = "0.4.3"
protocol = { path = "../protocol" }
nix = "0.28.0"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio = { version = "1.37.0", features = ["io-util", "sync", "rt", "rt-multi-thread", "fs", "macros"] }
tokio-vsock = "0.5.0"
futures-util = "0.3.30"
serde_yaml = "0.9.34"
