[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.2", features = ["derive", "cargo"] }
env_logger = "0.11.3"
gpt = "3.1.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = { version = "1.0.114", features = ["alloc"] }
shlex = "1.3.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "signal", "time"] }
tokio-util = "0.7.10"
tokio-vsock = "0.5.0"
uuid = "1.7.0"
